# winefish

./: AUTHORS  BUGS  CHANGES  DEVEL  Doxyfile  EXCLUDE  FUNCLIST  INCLUDE  INSTALL  Makefile.in  NEWS  README  ROADMAP  THANKS  TODO  VERSIONS  aclocal.m4  configure  configure.ac  index.html
data/: Makefile  Makefile.in  autotext.in  custom_menu.in  encodings.in  filetypes.in  funcref_bib.xml  funcref_packages.xml  funcref_symbols.xml  highlighting.in  winefish-project.desktop.in  winefish.applications.in  winefish.desktop.in  winefish.keys  winefish.mime  winefish.xml  words.in
doc/: Makefile  README  TIPS  berlios_news.txt  test_brace_finder.tex  winefish.html  winefish.txt
icons/: Makefile.in
inline_images/: Makefile  general_icons.c  toolbar_icons.c
man/: Makefile.in  winefish.1  winefish.1.in
po/: Makefile.in  README  de.po  fr.po  it.po  vi.po
src/: .kdbgrc.winefish  Makefile  Makefile.in  about.c  about.h  autox.c  autox.h  bf_lib.c  bf_lib.h  bfspell.c  bfspell.h  bluefish.h  bookmark.c  bookmark.h  brace_finder.c  brace_finder.h  char_table.c  char_table.h  config.h  config.h.in  config_spec.h  document.c  document.h  filebrowser.c  filebrowser.h  fref.c  fref.h  func_all.h  func_comment.c  func_comment.h  func_complete.c  func_complete.h  func_delline.c  func_delline.h  func_grep.c  func_grep.h  func_indent.c  func_indent.h  func_move.c  func_move.h  (+55 more)
